Changed Style and placeholder

--- a/Converter.html
+++ b/Converter.html
@@ -15,7 +15,7 @@
                 <h1 class="display-4 text-center mb-3">Weight Converter</h1>
                 <form>
                     <div class="form-group">
-                        <input id="kiloInput" type="number" class=" form-control form-control-lg" placeholder="Enter Weight in Kilogram...">
+                        <input id="kiloInput" type="number" class=" form-control form-control-lg" placeholder="Weight in Kilogram goes here...">
                     </div>
                 </form>
                 <div id="output">
